--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.13.1",
+    "@pinia/nuxt": "^0.10.1",
     "@primeuix/themes": "^1.0.0",
+    "@prisma/client": "^6.5.0",
+    "@tanstack/vue-table": "^8.21.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.479.0",
     "nuxt": "^3.16.0",
+    "pinia": "^3.0.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.1",
     "reka-ui": "^2.0.2",
@@ -24,12 +28,14 @@
     "tailwindcss-animate": "^1.0.7",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
+    "vue-tsc": "^2.2.8",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@primevue/nuxt-module": "^4.3.1",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
+    "prisma": "^6.5.0",
     "tailwindcss": "^3.4.17"
   }
 }
