--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "prisma:db:seed": "prisma db seed"
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.13.1",
@@ -36,6 +37,10 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "prisma": "^6.5.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "tsx": "^4.19.3"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
