--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@vueuse/core": "^13.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-vue": "^8.5.2",
     "lucide-vue-next": "^0.479.0",
     "next-auth": "^4.21.1",
     "nuxt": "^3.16.0",
@@ -43,6 +45,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.6.0",
     "@primevue/nuxt-module": "^4.3.1",
     "autoprefixer": "^10.4.21",
     "only-allow": "^1.2.1",
