--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nuxt": "^3.16.0",
     "nuxt-auth-utils": "^0.5.16",
     "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.1",
     "reka-ui": "^2.0.2",
