--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "setup": "pnpm install && pnpm run prisma:db:push && pnpm run prisma:db:seed"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/tailwindcss": "^6.13.1",
     "@pinia/nuxt": "^0.10.1",
