--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
+    "@hebilicious/vue-query-nuxt": "^0.3.0",
     "@internationalized/date": "^3.7.0",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/tailwindcss": "^6.13.1",
@@ -24,8 +25,10 @@
     "@primeuix/themes": "^1.0.0",
     "@prisma/client": "^6.5.0",
     "@sidebase/nuxt-auth": "^0.10.1",
+    "@tanstack/vue-query": "^5.69.0",
     "@tanstack/vue-table": "^8.21.2",
     "@vee-validate/zod": "^4.15.0",
+    "@vue/devtools-api": "^7.7.2",
     "@vueuse/core": "^13.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -62,5 +65,14 @@
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "@hebilicious/vue-query-nuxt",
+      "esbuild"
+    ],
+    "onlyBuiltDependencies": [
+      "@hebilicious/vue-query-nuxt"
+    ]
   }
 }
